--- a/index.html
+++ b/index.html
@@ -8,88 +8,148 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <title>Hello, world!</title>
+  <title>Alex Mette Portfolio</title>
 
   <style>
   </style>
 
 </head>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Alex Mette</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-          </div>
+      <div class=container-fluid>
+        <nav class="navbar-expand-lg navbar-light">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Alex Mette</a>
+                </li>
+              </ul>
+          </nav>
         </div>
-      </nav>
     </header>
 
   <body>
     
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/ferryblue.png); background-size: cover; min-height: 750px;">
         <div class="container">
-          <h1 class="display-4">Hello</h1>
-          <p class="lead">This is my portfolio.</p>
+          <img src="images/alexprof.png" class="float-right">
+          <h1 class="display-4 text-light">Hello</h1>
+          <p class="lead text-light" style="width: 50%">I work as a Salesforce admin and data analyst. I like to help organizations with a social mission and have worked with innovative non-profits and companies all over the world. I care about good design and making data useful. I like to explore new places and learn new skills.</p>
         </div>
     </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <div class="card-footer">
-              <a href="#" class="card-link">Card link</a>
-            </div>
+    
+
+    <div class=container>
+        <h2 class="text-center">Some Projects I've worked on</h2>
+    <div class="media ml-5 mr-5 mt-5 mb-5">
+        <img src="images/Ai4AllCustomApp.jpg" class="mr-3" alt="salesforce app icon with AI4ALL logo">
+        <div class="media-body">
+          <h5 class="mt-0">Program Management app in Salesforce</h5>
+          Set up a custom program management application for an organization that provides tech education opportunities for underserved youth. The app allows them to track engagement with the organization’s programs and to measure results through surveys.
+          <p><a href="#">See more.</a></p>
         </div>
       </div>
-    </div>
-    <div class="col-sm-3">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              <div class="card-footer">
-                <a href="#" class="card-link">Card link</a>
-              </div>
+
+      <div class="media ml-5 mr-5 mt-5 mb-5">
+          <img src="images/ctgov.png" class="mr-3" alt="...">
+          <div class="media-body">
+            <h5 class="mt-0">Open Data Clinical Trials Dashboard</h5>
+            Connected to an open database of clinical trials and built time-intelligence measures to allow users to visualize trends over time around geographies, sponsors, and therapeutic areas.
+            <p><a href="#">See more.</a></p>
           </div>
         </div>
-      </div>
-      <div class="col-sm-3">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                <div class="card-footer">
-                  <a href="#" class="card-link">Card link</a>
+
+        <div class="media ml-5 mr-5 mt-5 mb-5">
+            <img src="images/caspian.png" class="mr-3" alt="...">
+            <div class="media-body">
+              <h5 class="mt-0">Caspian Sea-Level Model</h5>
+              Model of sea-level change built using an environmental modeling software. The model incorporated inflows from rivers and precipitation and outflows from evaporation to predict changes in sea-level. Evaporation rates varied based on surface area, temperature, and salinity. Ultimately, the goal of the model is to provide a way for decision-makers to understand the impact of restricting inflows to the Sea through dams on the Volga river, which represents 80% of the Caspian’s inflow. 
+              <p><a href="#">See more.</a></p>
+            </div>
+          </div>
+
+          <div class="media ml-5 mr-5 mt-5 mb-5">
+              <img src="images/eg.jpeg" class="mr-3" alt="...">
+              <div class="media-body">
+                <h5 class="mt-0">Social Impact Bond: Girls Education in India</h5>
+                In 2013, while working as an LGT Venture Philanthropy Fellow with Educate Girls, an organization dedicated to eliminating the education gender gap in India, I contributed to the world’s first development impact bond in education. A social impact bond or development impact bond is a type of payment by results financing mechanism that brings together actors from the public and private sectors to fund positive social outcomes. 
+                <p><a href="#">See more.</a></p>
+              </div>
+            </div>
+          </div>
+
+  <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h2 class="text-center">Some skills I have</h2>
+        <div class="row justify-content-center min-height">
+          <div class="col-sm-2">
+            <div class="card h-100">
+              <div class="card-body align-items-center d-flex justify-content-center">
+                <h5 class="card-title">Salesforce</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-2">
+              <div class="card h-100">
+                <div class="card-body align-items-center d-flex justify-content-center">
+                  <h5 class="card-title">Business Analysis</h5>
                 </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  <div class="card-footer">
-                    <a href="#" class="card-link">Card link</a>
-                  </div>
               </div>
             </div>
+            <div class="col-sm-2">
+                <div class="card h-100">
+                  <div class="card-body align-items-center d-flex justify-content-center">
+                    <h5 class="card-title">Data Analysis</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-2">
+                  <div class="card h-100">
+                    <div class="card-body align-items-center d-flex justify-content-center">
+                      <h5 class="card-title">Project Management</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="card h-100">
+                      <div class="card-body align-items-center d-flex justify-content-center">
+                        <h5 class="card-title">Proposal Writing</h5>
+                      </div>
+                    </div>
+                  </div>
           </div>
-    </div>
+      </div>
   </div>
 
-
+<div class="container">
+  <h2 class="text-center">Some organizations I've worked with</h2>
+  
+  <div class="row imagetiles">
+    <div class="col-sm-3">
+      <img src="images/fhiclogo.jpg" class ="img-responsive">
+    </div>
+    <div class="col-sm-3">
+      <img src="images/fhi360logo.png" class ="img-responsive">
+    </div>
+    <div class="col-sm-3">
+      <img src="images/ai4alllogo.png" class ="img-responsive">
+    </div>
+    <div class="col-sm-3">
+     <img src="images/cfglogo.jpeg" class ="img-responsive">
+    </div>
+    <div class="col-sm-3">
+      <img src="images/lglogo.png" class ="img-responsive">
+    </div>
+    <div class="col-sm-3">
+      <img src="images/samalogo.jpeg" class ="img-responsive">
+    </div>
+      <div class="col-sm-3">
+        <img src="images/eglogo.jpg" class ="img-responsive">
+      </div>
+      <div class="col-sm-3">
+       <img src="images/ashokalogo.jpg" class ="img-responsive">
+      </div>
+  </div>
+</div>
 
 
     <!-- Optional JavaScript -->
