--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
     
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/ferryblue.png); background-size: cover; min-height: 750px;">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/ferryblue.png); background-size: cover; min-height: 500px;">
         <div class="container">
           <img src="images/alexprof.png" class="float-right">
           <h1 class="display-4 text-light">Hello</h1>
@@ -40,42 +40,41 @@
 
     <div class=container>
         <h2 class="text-center">Some Projects I've worked on</h2>
-    <div class="media ml-5 mr-5 mt-5 mb-5">
-        <img src="images/Ai4AllCustomApp.jpg" class="mr-3" alt="salesforce app icon with AI4ALL logo">
-        <div class="media-body">
+    <div class="media d-block d-md-flex mt-4">
+        <img class="d-flex mb-3 mx-auto media-image" src="images/Ai4AllCustomApp.jpg" alt="salesforce app icon with AI4ALL logo">
+        <div class="media-body text-md-left ml-md-3 ml-0">
           <h5 class="mt-0">Program Management app in Salesforce</h5>
           Set up a custom program management application for an organization that provides tech education opportunities for underserved youth. The app allows them to track engagement with the organization’s programs and to measure results through surveys.
           <p><a href="#">See more.</a></p>
         </div>
       </div>
-
-      <div class="media ml-5 mr-5 mt-5 mb-5">
-          <img src="images/ctgov.png" class="mr-3" alt="...">
-          <div class="media-body">
-            <h5 class="mt-0">Open Data Clinical Trials Dashboard</h5>
-            Connected to an open database of clinical trials and built time-intelligence measures to allow users to visualize trends over time around geographies, sponsors, and therapeutic areas.
-            <p><a href="#">See more.</a></p>
-          </div>
+    
+      <div class="media d-block d-md-flex mt-4">
+        <img class="d-flex mb-3 mx-auto media-image" src="images/ctgov.png" alt="dashboard with charts and graphs">
+        <div class="media-body text-md-left ml-md-3 ml-0">
+          <h5 class="mt-0">Open Data Clinical Trials Dashboard</h5>
+          Connected to an open database of clinical trials and built time-intelligence measures to allow users to visualize trends over time around geographies, sponsors, and therapeutic areas.
+          <p><a href="#">See more.</a></p>
         </div>
+      </div>
 
-        <div class="media ml-5 mr-5 mt-5 mb-5">
-            <img src="images/caspian.png" class="mr-3" alt="...">
-            <div class="media-body">
-              <h5 class="mt-0">Caspian Sea-Level Model</h5>
-              Model of sea-level change built using an environmental modeling software. The model incorporated inflows from rivers and precipitation and outflows from evaporation to predict changes in sea-level. Evaporation rates varied based on surface area, temperature, and salinity. Ultimately, the goal of the model is to provide a way for decision-makers to understand the impact of restricting inflows to the Sea through dams on the Volga river, which represents 80% of the Caspian’s inflow. 
-              <p><a href="#">See more.</a></p>
-            </div>
-          </div>
+      <div class="media d-block d-md-flex mt-4">
+        <img class="d-flex mb-3 mx-auto media-image" src="images/caspian.png" alt="diagram of boxes and arrows">
+        <div class="media-body text-md-left ml-md-3 ml-0">
+          <h5 class="mt-0">Caspian Sea-Level Model</h5>
+          Model of sea-level change built using an environmental modeling software. The model incorporated inflows from rivers and precipitation and outflows from evaporation to predict changes in sea-level. Evaporation rates varied based on surface area, temperature, and salinity. Ultimately, the goal of the model is to provide a way for decision-makers to understand the impact of restricting inflows to the Sea through dams on the Volga river, which represents 80% of the Caspian’s inflow. 
+          <p><a href="#">See more.</a></p>
+        </div>
+      </div>
 
-          <div class="media ml-5 mr-5 mt-5 mb-5">
-              <img src="images/eg.jpeg" class="mr-3" alt="...">
-              <div class="media-body">
-                <h5 class="mt-0">Social Impact Bond: Girls Education in India</h5>
-                In 2013, while working as an LGT Venture Philanthropy Fellow with Educate Girls, an organization dedicated to eliminating the education gender gap in India, I contributed to the world’s first development impact bond in education. A social impact bond or development impact bond is a type of payment by results financing mechanism that brings together actors from the public and private sectors to fund positive social outcomes. 
-                <p><a href="#">See more.</a></p>
-              </div>
-            </div>
-          </div>
+      <div class="media d-block d-md-flex mt-4">
+        <img class="d-flex mb-3 mx-auto media-image" src="images/eg.jpeg" alt="indian schoolgirls sitting in class">
+        <div class="media-body text-md-left ml-md-3 ml-0">
+          <h5 class="mt-0">Social Impact Bond: Girls Education in India</h5>
+          In 2013, while working as an LGT Venture Philanthropy Fellow with Educate Girls, an organization dedicated to eliminating the education gender gap in India, I contributed to the world’s first development impact bond in education. A social impact bond or development impact bond is a type of payment by results financing mechanism that brings together actors from the public and private sectors to fund positive social outcomes. 
+          <p><a href="#">See more.</a></p>
+        </div>
+      </div>
 
   <div class="jumbotron jumbotron-fluid">
       <div class="container">
@@ -83,35 +82,35 @@
         <div class="row justify-content-center min-height">
           <div class="col-sm-2">
             <div class="card h-100">
-              <div class="card-body align-items-center d-flex justify-content-center">
+              <div class="card-body align-items-center d-flex justify-content-center text-center">
                 <h5 class="card-title">Salesforce</h5>
               </div>
             </div>
           </div>
           <div class="col-sm-2">
               <div class="card h-100">
-                <div class="card-body align-items-center d-flex justify-content-center">
+                <div class="card-body align-items-center d-flex justify-content-center text-center">
                   <h5 class="card-title">Business Analysis</h5>
                 </div>
               </div>
             </div>
             <div class="col-sm-2">
                 <div class="card h-100">
-                  <div class="card-body align-items-center d-flex justify-content-center">
+                  <div class="card-body align-items-center d-flex justify-content-center text-center">
                     <h5 class="card-title">Data Analysis</h5>
                   </div>
                 </div>
               </div>
               <div class="col-sm-2">
                   <div class="card h-100">
-                    <div class="card-body align-items-center d-flex justify-content-center">
+                    <div class="card-body align-items-center d-flex justify-content-center text-center">
                       <h5 class="card-title">Project Management</h5>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="card h-100">
-                      <div class="card-body align-items-center d-flex justify-content-center">
+                      <div class="card-body align-items-center d-flex justify-content-center text-center">
                         <h5 class="card-title">Proposal Writing</h5>
                       </div>
                     </div>
