--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
   <body>
     
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/ferryblue.png); background-size: cover; min-height: 500px;">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/goagrey.jpg); background-size: cover; min-height: 500px;">
         <div class="container">
-          <img src="images/alexprof.png" class="float-right">
+          <img src="images/alexprof.png" class="float-sm-none float-md-right float-lg-right float-xl-right">
           <h1 class="display-4 text-light">Hello</h1>
           <p class="lead text-light" style="width: 50%">I work as a Salesforce admin and data analyst. I like to help organizations with a social mission and have worked with innovative non-profits and companies all over the world. I care about good design and making data useful. I like to explore new places and learn new skills.</p>
         </div>
@@ -41,7 +41,7 @@
     <div class=container>
         <h2 class="text-center">Some Projects I've worked on</h2>
     <div class="media d-block d-md-flex mt-4">
-        <img class="d-flex mb-3 mx-auto media-image" src="images/Ai4AllCustomApp.jpg" alt="salesforce app icon with AI4ALL logo">
+        <img class="d-flex mb-3 mx-auto media-image" src="images/aisf.png" alt="salesforce app icon with AI4ALL logo">
         <div class="media-body text-md-left ml-md-3 ml-0">
           <h5 class="mt-0">Program Management app in Salesforce</h5>
           Set up a custom program management application for an organization that provides tech education opportunities for underserved youth. The app allows them to track engagement with the organization’s programs and to measure results through surveys.
@@ -123,28 +123,28 @@
   <h2 class="text-center">Some organizations I've worked with</h2>
   
   <div class="row imagetiles">
-    <div class="col-sm-3">
+    <div class="col-sm-3 text-center">
       <img src="images/fhiclogo.jpg" class ="img-responsive">
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 text-center">
       <img src="images/fhi360logo.png" class ="img-responsive">
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 text-center">
       <img src="images/ai4alllogo.png" class ="img-responsive">
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 text-center">
      <img src="images/cfglogo.jpeg" class ="img-responsive">
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 text-center">
       <img src="images/lglogo.png" class ="img-responsive">
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 text-center">
       <img src="images/samalogo.jpeg" class ="img-responsive">
     </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 text-center">
         <img src="images/eglogo.jpg" class ="img-responsive">
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 text-center">
        <img src="images/ashokalogo.jpg" class ="img-responsive">
       </div>
   </div>
