--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
   <body>
     
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/goagrey.jpg); background-size: cover; min-height: 500px;">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/tetons.jpeg); background-size: cover; min-height: 700px;">
         <div class="container">
-          <img src="images/alexprof.png" class="float-sm-none float-md-right float-lg-right float-xl-right">
+          <img src="images/AlexTrailhead.jpeg" class="float-sm-none float-md-right float-lg-right float-xl-right">
           <h1 class="display-4 text-light">Hello</h1>
-          <p class="lead text-light" style="width: 50%">I work as a Salesforce admin and data analyst. I like to help organizations with a social mission and have worked with innovative non-profits and companies all over the world. I care about good design and making data useful. I like to explore new places and learn new skills.</p>
+          <p class="lead text-light" style="width: 100%">I work as a Salesforce admin and data analyst. I like to help organizations with a social mission and have worked with innovative non-profits and companies all over the world. I care about good design and making data useful. I like to explore new places and learn new skills.</p>
         </div>
     </div>
 
@@ -40,7 +40,8 @@
 
     <div class=container>
         <h2 class="text-center">Some Projects I've worked on</h2>
-    <div class="media d-block d-md-flex mt-4">
+    
+        <div class="media d-block d-md-flex mt-4">
         <img class="d-flex mb-3 mx-auto media-image" src="images/aisf.png" alt="salesforce app icon with AI4ALL logo">
         <div class="media-body text-md-left ml-md-3 ml-0">
           <h5 class="mt-0">Program Management app in Salesforce</h5>
@@ -72,7 +73,12 @@
         <div class="media-body text-md-left ml-md-3 ml-0">
           <h5 class="mt-0">Social Impact Bond: Girls Education in India</h5>
           In 2013, while working as an LGT Venture Philanthropy Fellow with Educate Girls, an organization dedicated to eliminating the education gender gap in India, I contributed to the world’s first development impact bond in education. A social impact bond or development impact bond is a type of payment by results financing mechanism that brings together actors from the public and private sectors to fund positive social outcomes. 
-          <p><a href="#">See more.</a></p>
+          <p><a data-toggle="collapse" href="#collapseEGPost" aria-expanded="false">See more.</a></p>
+          <div class ="collapse" id="collapseEGPost">
+            <p>
+              some text about EG SIB...Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
         </div>
       </div>
 
