--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
   <body>
     
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/goagrey.jpg); background-size: cover; min-height: 500px;">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/tetons.jpeg); background-size: cover; min-height: 700px;">
         <div class="container">
-          <img src="images/alexprof.png" class="float-sm-none float-md-right float-lg-right float-xl-right">
+          <img src="images/AlexTrailhead.png" class="float-sm-none float-md-right float-lg-right float-xl-right">
           <h1 class="display-4 text-light">Hello</h1>
           <p class="lead text-light" style="width: 50%">I work as a Salesforce admin and data analyst. I like to help organizations with a social mission and have worked with innovative non-profits and companies all over the world. I care about good design and making data useful. I like to explore new places and learn new skills.</p>
         </div>
