--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                                                         I like to help organizations with a social mission 
                                                         and have worked with innovative non-profits and companies 
                                                         all over the world. I care about good design and making data useful. 
-                                                        cssI like to explore new places and learn new skills.</p>
+                                                        I like to explore new places and learn new skills.</p>
         </div>
     </div>
 
     
 
     <div class=container>
-        <h2 class="text-center">Some Projects I've worked on</h2>
+        <h2 class="text-center" margin="50px">Some Projects I've worked on</h2>
     
         <div class="media d-block d-md-flex mt-4">
         <img class="d-flex mb-3 mx-auto media-image" src="images/aisf.png" alt="salesforce app icon with AI4ALL logo">
