--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
 
     <div class=container>
-        <h2 class="text-center">Some Projects I've worked on</h2>
+        <h2 class="sectionTitle">Some Projects I've worked on</h2>
     
         <div class="media d-block d-md-flex mt-4">
         <img class="d-flex mb-3 mx-auto media-image" src="images/aisf.png" alt="salesforce app icon with AI4ALL logo">
