--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar-expand-lg navbar-light">
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Alex<br>Mette</a>
+                  <a class="nav-link" href="#">Alex Mette</a>
                 </li>
               </ul>
           </nav>
@@ -28,20 +28,20 @@
 
   <body>
     
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/tetons.jpeg); background-size: cover; min-height: 500px;">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/tetons.jpeg); background-size: cover; min-height: 400px;">
         <div class="container">
-          <h1 class="display-1 text-light">Alex Mette</h1>
+          <h1 class="display-1 text-light">Alex <br>Mette</h1>
         </div>
     </div>
 
       <div class="container">
         <div class="text-center">
-        <img src="images/AlexTrailhead.png" class="float-sm-none float-md-right float-lg-right float-xl-right">
+        <img src="images/AlexTrailhead.png" class="float-sm-none float-md-none float-lg-none float-xl-none">
         </div>
       </div>
 
       <div class="container">
-      <p class="lead" style="width: 50%">I work as a Salesforce admin and data analyst. 
+      <p class="lead" style="width: 75%">I work as a Salesforce admin and data analyst. 
         I like to help organizations with a social mission 
         and have worked with innovative non-profits and companies 
         all over the world. I care about good design and making data useful. 
