--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         </div>
     </div>
 
-      <div class="container">
-        <div class="text-center">
+      <div class="container" mt-5>
+        <div class="text-center" mt-5>
         <img src="images/AlexTrailhead.png" class="float-sm-none float-md-none float-lg-none float-xl-none">
         </div>
       </div>
 
-      <div class="container">
+      <div class="container" mt-5>
       <p class="lead" style="width: 75%" text-right mt-5></p>I work as a Salesforce admin and data analyst. 
         I like to help organizations with a social mission 
         and have worked with innovative non-profits and companies
