--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         </div>
     </div>
 
-      <div class="container" mt-5>
-        <div class="text-center" mt-5>
-        <img src="images/AlexTrailhead.png" class="float-sm-none float-md-none float-lg-none float-xl-none">
+      <div class="container">
+        <div class="text-center">
+        <img src="images/AlexTrailhead.png" class="float-sm-none float-md-none float-lg-none float-xl-none mt-5">
         </div>
       </div>
 
-      <div class="container" mt-5>
+      <div class="container">
       <p class="lead" style="width: 75%" text-right mt-5></p>I work as a Salesforce admin and data analyst. 
         I like to help organizations with a social mission 
         and have worked with innovative non-profits and companies
@@ -51,7 +51,7 @@
 
       <div class=container>
 
-        <h2 class="sectionTitle">Some Projects I've worked on</h2>
+        <h2 class="sectionTitle" mt-5>Some Projects I've worked on</h2>
     
         <div class="media d-block d-md-flex mt-4">
         <img class="d-flex mb-3 mx-auto media-image" src="images/aisf.png" alt="salesforce app icon with AI4ALL logo">
