--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <title>Alex Mette Portfolio</title>
+  <title>Alex Mette Personal Site</title>
 
   <style>
   </style>
 
 </head>
     <header>
-      <div class=container-fluid>
+      <div class="container-fluid">
         <nav class="navbar-expand-lg navbar-light">
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Alex Mette</a>
+                  <a class="nav-link" href="#">Home</a>
                 </li>
               </ul>
           </nav>
@@ -41,17 +41,22 @@
       </div>
 
       <div class="container">
-      <p class="lead" style="width: 75%" text-right mt-5></p>I work as a Salesforce admin and data analyst. 
+      <p class="lead width: 75% text-right mt-5">
+
+      </p>
+        I work as a Salesforce admin and data analyst. 
         I like to help organizations with a social mission 
         and have worked with innovative non-profits and companies
         all over the world. I care about good design and making data useful. 
-        I like to explore new places and learn new skills.</p>
+        I like to explore new places and learn new skills.
+      </p>
+
     </div>
 
 
-      <div class=container>
+      <div class="container-fluid bg-light">
 
-        <h2 class="sectionTitle" mt-5>Some Projects I've worked on</h2>
+        <h2 class="text-center mt-5">Projects/h2>
     
         <div class="media d-block d-md-flex mt-4">
         <img class="d-flex mb-3 mx-auto media-image" src="images/aisf.png" alt="salesforce app icon with AI4ALL logo">
@@ -96,7 +101,7 @@
 
   <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h2 class="text-center">Some skills I have</h2>
+        <h2 class="text-center">Skills</h2>
         <div class="row justify-content-center min-height">
           <div class="col-sm-2">
             <div class="card h-100">
@@ -138,7 +143,7 @@
   </div>
 
 <div class="container">
-  <h2 class="text-center">Some organizations I've worked with</h2>
+  <h2 class="text-center">Organizations</h2>
   
   <div class="row imagetiles">
     <div class="col-sm-3 text-center">
