--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="container-fluid bg-light">
 
-        <h2 class="text-center mt-5">Projects/h2>
+        <h2 class="text-center mt-5">Projects</h2>
     
         <div class="media d-block d-md-flex mt-4">
         <img class="d-flex mb-3 mx-auto media-image" src="images/aisf.png" alt="salesforce app icon with AI4ALL logo">
