--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
       <div class="container">
         <div class="text-center">
-        <img src="images/AlexTrailhead.png" class="float-sm-none float-md-right float-lg-right float-xl-right mt-5">
+        <img src="images/AlexTrailhead.png" class="float-sm-none float-md-right float-lg-right float-xl-right mt-5 mb-5">
         </div>
       </div>
 
       <div class="container">
       <h3 class="text-left mt-5">About me</h3>
-      <p class="lead text-right mt-5">
+      <p class="lead">
 
       </p>
         I work as a Salesforce admin and data analyst. 
