--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div class="container">
       <h3 class="text-left mt-5">About me</h3>
-      <p class="lead">
+      <p class="lead mb-5">
 
       </p>
         I work as a Salesforce admin and data analyst. 
@@ -54,14 +54,10 @@
 
     </div>
 
-    <div class="container">
-      <p></p>
-    </div>
 
+      <div class="container-fluid bg-light mt-5">
 
-      <div class="container-fluid bg-light">
-
-        <h2 class="text-center mt-5">Projects</h2>
+        <h2 class="text-center">Projects</h2>
     
         <div class="media d-block d-md-flex mt-4">
         <img class="d-flex mb-3 mx-auto media-image" src="images/aisf.png" alt="salesforce app icon with AI4ALL logo">
