--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 
   <body>
     
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/tetons.jpeg); background-size: cover; min-height: 400px;">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/tetons.jpeg); background-size: cover; min-height: 600px;">
         <div class="container">
           <h1 class="display-1 text-light">Alex <br>Mette</h1>
         </div>
     </div>
 
-      <div class="container">
+      <div class="container" style="min-height: 400px">
         <div class="text-center">
         <img src="images/AlexTrailhead.png" class="float-sm-none float-md-right float-lg-right float-xl-right mt-5 mb-5">
         </div>
       </div>
 
-      <div class="container">
+      <div class="container" style="min-height: 400px">
       <h3 class="text-left mt-5">About me</h3>
       <p class="lead mb-5">
 
