--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
         </div>
     </div>
 
-      <div class="container" style="min-height: 400px">
+    <div class="container" style="min-height: 400px">
+      <div class="container">
         <div class="text-center">
         <img src="images/AlexTrailhead.png" class="float-sm-none float-md-right float-lg-right float-xl-right mt-5 mb-5">
         </div>
       </div>
 
-      <div class="container" style="min-height: 400px">
+      <div class="container">
       <h3 class="text-left mt-5">About me</h3>
       <p class="lead mb-5">
 
@@ -53,6 +54,7 @@
       </p>
 
     </div>
+  </div>
 
 
       <div class="container-fluid bg-light mt-5">
