--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
       </div>
 
       <div class="container">
-      <h3 class="text-left mt-5">About me</h3>
-      <p class="lead mb-5">
+      <h3 class="text-left mt-5">Intro</h3>
+      <h5 class="text-left"> In a nutshull</h5>
+      
+      <p class="lead text-right">
 
       </p>
         I work as a Salesforce admin and data analyst. 
