--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
     
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/tetons.jpeg); background-size: cover; min-height: 600px;">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/underwater.jpg); background-size: cover; min-height: 600px;">
         <div class="container">
           <h1 class="display-1 text-light">Alex <br>Mette</h1>
         </div>
