--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
     
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/kite.jpg); background-size: cover; min-height: 600px;">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/kite.jpg); background-size: cover; min-height: 800px;">
         <div class="container">
           <h1 class="display-1 text-light">Alex <br>Mette</h1>
         </div>
@@ -60,7 +60,7 @@
 
 
       <div class="container-fluid bg-light mt-5">
-        <div class="container">
+        <div class="container mt-5">
         <h2 class="text-center mt-5">Projects</h2>
     
           <div class="media d-block d-md-flex mt-4">
