--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   </div>
 
 
-      <div class="container-fluid bg-light mt-5">
-        <div class="container mt-5">
-        <h2 class="text-center mt-5">Projects</h2>
+      <div class="container-fluid">
+        <div class="container">
+        <h2 class="text-center">Projects</h2>
     
           <div class="media d-block d-md-flex mt-4">
             <img class="d-flex mb-3 mx-auto media-image" src="images/aisf.png" alt="salesforce app icon with AI4ALL logo">
