--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h3 class="text-left mt-5">Intro</h3>
       <h5 class="text-left"> In a nutshull</h5>
       
-      <p class="lead text-right font-weight-light">
+      <p class="lead text-right font-weight-light w-50">
 
       </p>
         I work as a Salesforce admin and data analyst. 
