--- a/index.html
+++ b/index.html
@@ -199,17 +199,7 @@
 <div class="container">
   <h2 class="text-center">Contact</h2>
   
-  <div class="row justify-content-center">
-    <div class="col-auto">
-      <table class="table table-responsive table-borderless">
-          <tbody>
-              <td><a href="https://www.linkedin.com/in/alexanderjmette/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin_icon.png"> </a></td>
-              <td><a href="https://trailblazer.me/id/alexmette" target="_blank" rel="noopener noreferrer"><img src="images/trailhead_icon.png"> </a></td>
-              <td><a href="https://github.com/alexjmette" target="_blank" rel="noopener noreferrer"><img src="images/github_icon.png"> </a></td>
-          </tbody>
-      </table>
-    </div>
-  </div>
+  <a href="mailto:name@domain.com">Send me an email</a>
 
 </div>
 
@@ -219,5 +209,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script LANGUAGE="JavaScript">user = 'aljmet';site = 'gmail.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>
   </body>
 </html>
