adding forecast project page

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
           <div class="media d-block d-md-flex mt-4">
             <img class="d-flex mb-3 mx-auto media-image" src="images/aisf.png" alt="salesforce app icon with AI4ALL logo">
               <div class="media-body text-md-left ml-md-3 ml-0">
-          <h4 class="mt-0">Program Management app in Salesforce</h4>
-          Set up a custom program management application for an organization that provides tech education opportunities for underserved youth. The app allows them to track engagement with the organization’s programs and to measure results through surveys.
-          <p><a href="#">See more.</a></p>
+          <h4 class="mt-0">Project Forecast</h4>
+          Take a list of staff for a project and allocates their hours across the course of the project based on a standard burn rate that applies depending on the period of the project.
+          <p><a href="https://alexjmette.github.io/forecast">Read more.</a></p>
         </div>
       </div>
     
